--- a/index.html
+++ b/index.html
@@ -491,13 +491,13 @@
       <form action="https://formspree.io/f/xayaokzl" method="POST"
         class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-6 pb-8">
         <p id="contact"></p>
-        <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text-black">CONTACT US</h2>
-        <p class="text-black text-base text-center">
+        <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text-white">CONTACT US</h2>
+        <p class="text-white text-base text-center">
           Any issues! Fill the form below and our team will contact you shortly.
         </p>
         <br />
         <div class="mb-4">
-          <label class="block text-gray-300 text-sm font-bold mb-2" for="contact_nom">
+          <label class="block text-white text-sm font-bold mb-2" for="contact_nom">
             Name
           </label>
           <input
@@ -505,7 +505,7 @@
             id="contact_nom" name="contact_nom" type="text" placeholder="Name">
         </div>
         <div class="mb-6">
-          <label class="block text-gray-300 text-sm font-bold mb-2" for="contact_email">
+          <label class="block text-white text-sm font-bold mb-2" for="contact_email">
             Email
           </label>
           <input
@@ -513,7 +513,7 @@
             id="contact_email" name="contact_email" type="email" required placeholder="hello@petme">
         </div>
         <div class="mb-6">
-          <label for="contact_message" class="block text-gray-300 text-sm font-bold mb-2">Message</label>
+          <label for="contact_message" class="block text-white text-sm font-bold mb-2">Message</label>
           <textarea
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
             id="contact_message" name="contact_message" required rows="6" placeholder="Your message"></textarea>
