chang font-color of text to be more visible to the users

--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
       <form action="https://formspree.io/f/xayaokzl" method="POST"
         class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-6 pb-8">
         <p id="contact"></p>
-        <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text-black">CONTACT US</h2>
-        <p class="text-black text-base text-center">
+        <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text-white">CONTACT US</h2>
+        <p class="text-white text-base text-center">
           Any issues! Fill the form below and our team will contact you shortly.
         </p>
         <br />
