--- a/adopt.html
+++ b/adopt.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="./reportstary.css">
   <link rel="stylesheet" href="./navbar.css" />
+  <link rel="stylesheet" href="./autcomplete.css" />
   <!-- <link rel="stylesheet" href="./introSection.css"> -->
   <!-- <link rel="stylesheet" href="./mobileView.css"> -->
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
@@ -126,8 +127,7 @@
           Address(street address,City, pincode)
           <span class="hint">(optional)</span>
         </label>
-        <input type="address" name="first address" id="first address" class="form-control"
-          placeholder="Enter your correct address (eg. Meenawati marg, Lucknow, 209087)" />
+        <div id="autocomplete" class="autocomplete-container"></div>
       </div>
       <div class="form-group">
         <label for="landmark">
@@ -152,6 +152,7 @@
     </form>
   </div>
   <script src="./navbar.js"></script>
+  <script src="./completeAddress.js"></script>
 <script src="./light-dark-theme.js"></script>
 </body>
 
