--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,6 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="stylesheet" href="./output.css">
   <link rel="stylesheet" href="./style.css">
-  <link rel="stylesheet" href="./blog.css">
   <link rel="stylesheet" href="./introSection.css">
   <link rel="stylesheet" href="./navbar.css">
   <link rel="stylesheet" href="./mobileView.css">
@@ -118,7 +117,7 @@
 <!---Blogs container-->
   <section class="main-body-section bg-amber-50">
     <div class="container max-w-5xl mx-auto">
-      <img src="./cats-dogs-3.jpg" class="mt-3 ">
+      <img src="./Assets/cats-dogs.jpg" class="mt-3 ">
         <h1 class="xl:-mt-7 mb-2 text-black text-4xl leading-tight font-bold text-center w-full">
           Blogs
         </h1>
@@ -241,5 +240,6 @@
   <script src="index.js"></script>
   <script src="light-dark-theme.js"></script>
   <script src="blog.js"></script>
+  <script src="navbar.js"></script>
 </body>
 </html>
