Spelling mistake solved "inbox"

--- a/blogs/disha.html
+++ b/blogs/disha.html
@@ -138,7 +138,7 @@
       <div class=" md:flex flex-col hidden text-center items-center flex-1 ">
         <div class=" space-y-2">
           <h3 class="text-2xl ">Subscribe to our newsletter</h3>
-          <div class="text-md">Get the latest news and updates delivered straight to your index.</div>
+          <div class="text-md">Get the latest news and updates delivered straight to your inbox.</div>
           <div class="text-center">
             <input class="my-1 mr-2 p-2 rounded-md" type="email" id="email" name="email"
               placeholder="Enter your email address">
@@ -189,7 +189,7 @@
     <div class=" bg-gray-900 pt-5 pb-8 flex flex-col text-center md:hidden mt-8 items-center flex-1 ">
       <div class=" space-y-2">
         <h3 class="text-2xl text-center">Subscribe to our newsletter</h3>
-        <div class="text-md">Get the latest news and updates delivered straight to your index.</div>
+        <div class="text-md">Get the latest news and updates delivered straight to your inbox.</div>
         <div class="text-center">
           <input class="my-1 mr-2 p-2 rounded-md" type="email" id="email" name="email"
             placeholder="Enter your email address">
