added a back to top button

--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
       </div>
     </div>
 
+
+    <!-- back to top button -->
+      <li><a href="#top">
+        <button id="bttbutton" title="backtotop" > 
+          <img src="Assets/Images/uparrow.png"
+          width="20"
+          height="25"/></button>
+        
+    
+    <!--end of back to top button -->
+
     <!-- SOS button -->
     <div>
       <form action="./reportstary.html" method="get" target="_blank">
