--- a/blogs/pagsum.html
+++ b/blogs/pagsum.html
@@ -22,7 +22,7 @@
     </header>
 
     <div class=" w-[32rem]  xl:w-[117rem] my-0 mx-0 xl:mx-auto">
-        <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[60rem]  xl:mx-auto bg-[url('./img/b8-poster.png')] bg-no-repeat bg-cover snap-center rounded-3xl">
+        <div class="w-[360px] xl:w-[114rem] h-[25rem] xl:h-[60rem]  xl:mx-auto bg-[url('./img/b8-poster.png')] bg-no-repeat bg-cover snap-center rounded-xl">
 
         </div>
 
