bug fix on abhinav blog page

--- a/blogs/abhinav.html
+++ b/blogs/abhinav.html
@@ -32,12 +32,12 @@
             <div class="flex justify-between items-center my-[3rem] mx-0">
                 <div class="flex justify-between items-center">
                     <div class="w-24 h-24">
-                        <a href="- https://github.com/AKG1301">
+                        <a href="https://github.com/AKG1301">
                             <img src="https://avatars.githubusercontent.com/u/52539720?v=4" class="rounded-3xl">
                         </a>
                     </div>
                     <div class="text-gray-700 text-xl font-normal my-0 mx-[1rem] tracking-normal">
-                        <a href="- https://github.com/AKG1301">
+                        <a href="https://github.com/AKG1301">
                             <h3 class="uppercase"><b>Abhinav K Gupta</b></h3>
                             <p>Octobor 14, 2022</p>
                         </a>
