--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
 						</li>
 						<li>
 							<a
+								href="./news.html"
+								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								>Pet News</a
+							>
+						</li>
+						<li>
+							<a
 								href="./blog.html"
 								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>Blogs</a
