--- a/volunteer.html
+++ b/volunteer.html
@@ -65,6 +65,9 @@
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About
                             Us</a>
                     </li>
+                    <li><a href="news.html"
+                        class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Pet News</a>
+                    </li>
                     <li><a href="blog.html"
                             class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
                     </li>
