--- a/index.html
+++ b/index.html
@@ -235,21 +235,17 @@
 				<p
 					class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl text_4"
 				>
-					A Platform that allows animals to be adopted, donated to pet lovers,
-					and provides emergency medical care to stray animals in need. This
-					Platform also provide significant features like
+					Our mission is to provide a platform that connects animal lovers with pets in need of a forever home, while also providing emergency medical care for stray animals in distress. We strive to make a difference in the lives of these innocent creatures by offering options to
 					<a class="hover-underline-animation" href="#adopt"
-						><b>Animal Adoption</b></a
+						><b>Adopt</b></a
 					>,
 					<a class="hover-underline-animation" href="./donate.html"
-						><b>Pet Donation</b></a
-					>. Also provides
+						><b>Donate</b></a
+					> and through our SOS feature
 					<a class="hover-underline-animation" href="./reportstary.html"
-						><b>SOS report</b></a
+						><b>Report</b></a
 					>
-					for stray animal in harsh conditions they can fill out the details and
-					a representative will reach the location to assist the animal with
-					medical aid.
+					stray animals in need of immediate assistance. Together, we can create a better world for all animals.
 				</p>
 			</div>
 		</section>
