--- a/adopt.html
+++ b/adopt.html
@@ -33,7 +33,7 @@
   <button data-collapse-toggle="navbar-default" type="button"
     class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden  focus:outline-none  text_4 "
     aria-controls="navbar-default" aria-expanded="false" id="nav-button">
-    <span class="sr-only">Open main menu</span>
+    <span class="sr-only">Open Main Menu</span>
     <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
       xmlns="http://www.w3.org/2000/svg">
       <path fill-rule="evenodd"
@@ -109,7 +109,7 @@
   <div class="container">
     <div class="info">
       <h1 id="title">Adopt Your Favourite Pet</h1>
-      <p id="description">The details you provide with this form will be used to reach the nearest </br>authority/organization at the location of the pet.</p>
+      <p id="description">The details that you provide using this form will be used to reach the nearest </br>authority/organization closest to the location of the pet.</p>
       </div>
     <form class="sm:w-1/2 h-min  mx-auto" id="survey-form" action="https://formspree.io/f/xayaokzl" method="POST">
       <div >
@@ -123,7 +123,7 @@
       </div>
       <div class="form-group">
         <label for="address">
-          Address(street address,City, pincode)
+         Street Address | City | Pincode
           <span class="hint">(optional)</span>
         </label>
         <input type="address" name="first address" id="first address" class="form-control"
