--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					<div class="main-body-heading-text">
 						<h1 class="heading-main-body-h1">Adopt Me</h1>
 						<div class="heading-main-body-moto">
-							Give life to a needed animal
+							Give life to an animal in need.
 						</div>
 					</div>
 				</div>
