--- a/volunteer.html
+++ b/volunteer.html
@@ -132,7 +132,7 @@
                     Thanks for showing your support
                 </h1>
                 <p class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-90">
-                    Fill up the form below to become volunteer.
+                    Fill out the form below to become volunteer.
                 </p>
             </div>
             <form id="survey-form" action="https://formspree.io/f/xayaokzl" method="POST">
