--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					></path>
 				</svg>
 			</button>
-			<nav class="">
+			<nav  class="big">
 				<div class="hidden w-full lg:block z-0" id="navbar">
 					<ul
 						class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
@@ -787,6 +787,22 @@
 				/>
 			</svg>
 		</div>
+		 <!-- big size img -->
+		 
+		<div class="imgbig" id="imgbigs">
+			<img src="Assets/Images/goldern-ret.jpg" alt="" class="big">
+			<img src="Assets/Images/pug.jpg" alt=""  class="big">
+			<img src="Assets/Images/husky.jpg" alt=""  class="big">
+			<img src="Assets/Images/ragdo.jpg" alt=""  class="big">
+			<img src="Assets/Images/persian.webp" alt=""  class="big">
+			<img src="Assets/Images/angora.jpg" alt=""  class="big">
+			<img src="Assets/Images/german.jpg" alt=""  class="big">
+			<img src="Assets/Images/porme.jpg" alt=""  class="big"> 
+		</div>
+		<div style="display: none;" id="iccon-close" class="iccon-close"> 
+			<img src="Assets/icon-close.svg" alt=""  id="close-img">
+		</div>
+		<div style="display:none;" class="black" id="black"></div>
 
 		<!-- Contributors section ends -->
 
