--- a/index.html
+++ b/index.html
@@ -914,6 +914,8 @@
 							id="email"
 							name="email"
 							placeholder="Enter your email address"
+						       	style="color: black"
+
 						/>
 						<button
 							class="bg-red-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
