--- a/adopt.html
+++ b/adopt.html
@@ -10,6 +10,7 @@
   <!-- <link rel="stylesheet" href="./introSection.css"> -->
   <!-- <link rel="stylesheet" href="./mobileView.css"> -->
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
+  <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
   <title>Adopt Me</title>
 </head>
 
