--- a/reportstary.html
+++ b/reportstary.html
@@ -15,7 +15,8 @@
   <link rel="stylesheet" href="./navbar.css">
   <link rel="stylesheet" href="./mobileView.css">
   <link rel="stylesheet" href="./reportstary.css">
-  <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico"> -->
+  <link rel="shortcut icon" type="image/x-icon" href="/PetMe/Assets/Images/logo.jpg">
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <title>Report critical stray animal: PetMe</title>
