fixed nav items

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				</svg>
 			</button>
 			<nav class="">
-				<div class="hidden w-full lg:block z-0" id="navbar">
+				<div class="hidden w-full lg:block z-2" id="navbar">
 					<ul
 						class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center"
 					>
@@ -89,7 +89,7 @@
 						<li>
 							<a
 								href="#About"
-								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
+								class="  text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
 								>About Us</a
 							>
 						</li>
@@ -111,7 +111,7 @@
 							<a
 								href="./donate.html"
 								class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item"
-								>Donate Animals</a
+								>Donate</a
 							>
 						</li>
 						<li>
