removed style and added class

--- a/index.html
+++ b/index.html
@@ -822,12 +822,11 @@
 						</div>
 						<div class="text-center">
 							<input
-								class="my-1 mr-2 p-2 rounded-md"
+								class="my-1 mr-2 p-2 rounded-md text-black"
 								type="email"
 								id="email"
 								name="email"
 								placeholder="Enter your email address"
-								style="color: black"
 							/>
 							<button
 								class="bg-red-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
