added the same change to all the files

--- a/blogs/alexis.html
+++ b/blogs/alexis.html
@@ -109,7 +109,7 @@
           <h3 class="text-2xl ">Subscribe to our newsletter</h3>
           <div class="text-md">Get the latest news and updates delivered straight to your inbox.</div>
           <div class="text-center">
-            <input class="my-1 mr-2 p-2 rounded-md" type="email" id="email" name="email"
+            <input class="my-1 mr-2 p-2 rounded-md text-black" type="email" id="email" name="email"
               placeholder="Enter your email address">
             <button class="bg-red-600 hover:bg-red-500 text-white py-2 px-4 rounded-md" type="submit">Subscribe</button>
           </div>
