Update  the box before the subscribe button
I made the text visible when the user clicks to enter the email address.

--- a/index.html
+++ b/index.html
@@ -827,6 +827,7 @@
 								id="email"
 								name="email"
 								placeholder="Enter your email address"
+							        style="color: black"
 							/>
 							<button
 								class="bg-red-600 hover:bg-red-500 text-white py-2 px-4 rounded-md"
